# logging

./: .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Config.cmake.in  Doxyfile  README.md  core.cpp  core.h  core.inl  dbgstream.h  derivation.nix  emc_prepare.sh  file_logger.h  formatter.h  generate-raspi.sh  generate.sh  log_level.cpp  log_level.h  logger.cpp  logger.h  logger.inl  message_queue.cpp  message_queue.h  prepare.sh  record.cpp  record.h  record.inl  recorder.cpp  recorder.h  recorder.inl  redirect_stream.h  time_util.cpp  time_util.h  version.h.in
src/: core.cpp  core.h  dbgstream.h  file_logger.h  formatter.h  log_level.cpp  log_level.h  logger.h  message_queue.cpp  message_queue.h  record.cpp  record.h  recorder.cpp  recorder.h  version.h.in
tests/: CMakeLists.txt  formatter_test.cpp
